# filamentizator

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: main.rs  utils.rs
backend/src/db/: color.rs  filament.rs  filament_color.rs  filament_simple.rs  material.rs  mod.rs  vendor.rs
backend/src/handlers/: color.rs  filament.rs  filament_color.rs  filament_simple.rs  material.rs  mod.rs  structs.rs  vendor.rs
backend/src/models/: color.rs  filament.rs  filament_color.rs  filament_simple.rs  material.rs  mod.rs  temp.rs  vendor.rs  weight.rs
device/: Cargo.toml  README.md  build.rs  example.env
device/old/display/: Cargo.toml
device/old/general/: Cargo.toml  build.rs  main.rs
device/old/network/: Cargo.toml  main.rs
device/src/: api_client.rs  button.rs  client.rs  error.rs  images.rs  lib.rs  models.rs  navigator.rs  rgbled.rs  ui.rs  wifi.rs
device/src/display/: mod.rs  ssd1306.rs
device/src/ui/: font.rs  images.rs  mod.rs
device/src/ui/screen/: draw.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BigFilamentCard.tsx  CustomSidebar.tsx  Footer.tsx  GradientColorIndicator.tsx  NameTable.tsx  Navbar.tsx  SmallFilamentCard.tsx
frontend/src/lib/: utils.ts
frontend/src/models/: filament.ts  vendor.ts
frontend/src/pages/: Account.tsx  Colors.tsx  Device.tsx  Filament.tsx  FilamentNotFound.tsx  Filaments.tsx  GeneralNotFound.tsx  Home.tsx  Labels.tsx  Materials.tsx  NotFound.tsx  PageNotFound.tsx  Vendors.tsx
frontend/src/styles/: classes.css  elements.css
frontend/src/types/: color.ts  filament.ts  filamentColor.ts  material.ts  temp.ts  weight.ts
