[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.14.0"
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = [
  "migrate",
  "postgres",
  "runtime-tokio",
  "chrono",
] }
